<resources>
    <string name="app_name">PAS Transport</string>
    <string name="api_key_map">AIzaSyAYhgf_1NDnhRVkFs8VCK4Qmg4dtAfaEfA</string>
    <string name="please_select_date_first">Please select a date first</string>
    <string name="alert_title">Alert</string>
    <string name="permission_required">Permission Required</string>
    <string name="continue_co">Continue</string>
    <string name="you_need_to_allow_access_to_nlocation_in_order_to_use_app_nplease_try_again_and_hit_below_button">You need to allow access to\nlocation in order to use app.\nPlease try again and hit below button.</string>
    <string name="oops">Oops</string>
    <string name="app_require_notification_permission">This app requires notification permission to notify you about important updates. Please enable the permission in app settings.</string>
    <string name="to_work_need_notification">Notification permission is required for the app to function properly.</string>
    <string name="gps_required">GPS is required you be turned on</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core functionality.</string>
    <string name="select_photo">Select Photo</string>
    <string name="select_">Select</string>
    <string name="open_camera">Camera</string>
    <string name="pick_from_gallery">Gallery</string>
    <string name="try_again">Try Again</string>
    <string name="no_internet_text">Your device is not connected to internet, \n please make sure your connection is \n working!</string>
    <string name="no_internet_connection">No internet \n connection available!</string>
    <string name="permission_rationale">Location permission needed for core functionality</string>
    <string name="session_expired">Session expired! Please log back in to continue.</string>
    <string name="connection_timed_out">The connection timed out. Please try again.</string>
    <string name="cannot_reach_server">Cannot reach the server. Please check your internet connection and try again.</string>
    <string name="unexpected_error">An unexpected error occurred. Please try again.</string>
    <string name="next">Next</string>
    <string name="log_in">Log In</string>
    <string name="welcome_to_login">Welcome to Login!</string>
    <string name="email">Email</string>
    <string name="enter_email">Enter Email</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="forgot_password_">Forgot password?</string>
    <string name="forgot_password_content">We just need your registered Email ID to\nsend your password reset instructions.</string>
    <string name="submit">Submit</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="sign_up_"><u>Sign up</u></string>
    <string name="log_in_"><u>login</u></string>
    <string name="sign_up">Sign up</string>
    <string name="sign_up_content">Enter your details below &amp; free sign up</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="enter_name">Enter Name</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_confirm_password">Enter Confirm Password</string>
    <string name="new_password">New Password</string>
    <string name="old_password">Old Password</string>
    <string name="agree_with_our_terms_amp_conditions">By creating an account you have to agree with our <u>Terms &amp; Conditions</u></string>
    <string name="already_have_an_account">Already have an account？</string>
    <string name="verification">Verification</string>
    <string name="verification_content">Enter the 4-digit code sent to you at</string>
    <string name="verify">Verify</string>
    <string name="request_again"><u>Request again</u></string>
    <string name="didn_t_receive_code">Didn’t receive code?</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dummy_text">Lorem Ipsum is simply dummy text\nof the printing and typesetting\nindustry.</string>
    <string name="choose_login_type">Choose Login Type</string>
    <string name="user">User</string>
    <string name="driver">Driver</string>
    <string name="settings">Settings</string>
    <string name="notifications">Notifications</string>
    <string name="change_password">Change Password</string>
    <string name="my_cards">My Cards</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="about_us">About Us</string>
    <string name="contact_support">Contact Support</string>
    <string name="log_out">Log Out</string>
    <string name="delete_account">Delete Account</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="are_you_sure_you_want_to_delete_your_account">Are you sure you want to delete your account?</string>
    <string name="are_you_sure_you_want_to_block_this_user">Are you sure you want to block\nthis user</string>
    <string name="message">Message</string>
    <string name="messages">Messages</string>
    <string name="profile">Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="documents">Documents</string>
    <string name="lorem_ipsum_dolor_sit_amet_">Lorem ipsum dolor sit amet, consectetur\nadipiscing elit. Fusce eleifend laoreet \nfermentum. Aliquam quis ex non lectus \npretium mollis eu eget nunc. Pellentesque \ntempus rhoncus aliquam. In feugiat \nsagittis justo in sagittis. Aenean at efficitur \nipsum. Morbi tempus gravida metus, nec \nvehicula turpi</string>
    <string name="i_accept">I Accept</string>
    <string name="update">Update</string>
    <string name="type">Type.....</string>
    <string name="add_new_card">Add New Card</string>
    <string name="add_new_card_">+ Add New Card</string>
    <string name="save">Save</string>
    <string name="name_on_card">Name on card</string>
    <string name="enter_name_on_card">Card Holder Name</string>
    <string name="card_number">Card Number</string>
    <string name="exp_date">Exp. Date</string>
    <string name="cvv">CVV</string>
    <string name="history">History</string>
    <string name="past">Past</string>
    <string name="current">Current</string>
    <string name="estimated_arrival_time">Estimated Arrival Time</string>
    <string name="ongoing">Ongoing</string>
    <string name="completed">Completed</string>
    <string name="are_you_sure_you_want_to_report_nthis_person">Are you sure you want to report\nthis person?</string>
    <string name="reason_to_report">Write a reason to report this person?</string>
    <string name="reject">Reject</string>
    <string name="accept">Accept</string>
    <string name="details">Details</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="location">Location</string>
    <string name="trip_cancel">Trip Cancel</string>
    <string name="cancel"><u>Cancel</u></string>
    <string name="cancel_ride">Cancel Ride</string>
    <string name="start_trip">Start Trip</string>
    <string name="end_trip">End Trip</string>
    <string name="nearby_drivers">Nearby Drivers</string>
    <string name="trip_detail">Trip Details</string>
    <string name="price">Price</string>
    <string name="driver_detail">Driver Details</string>
    <string name="complete">Complete</string>
    <string name="payment_method">Payment Method</string>
    <string name="pay_now">Pay Now</string>
    <string name="your_payment_has_been_sent_successfully">Your payment has been sent\nsuccessfully!</string>
    <string name="done">Done</string>
    <string name="rate_review"><![CDATA[Rate & Review]]></string>
    <string name="add_rating_amp_review"><![CDATA[Add Rating & Review]]></string>
    <string name="review">Review</string>
    <string name="alert">Alert</string>
    <string name="permissionRequired">Permisiion Required</string>
    <string name="ok">Ok</string>
    <string name="openSettings">Open Setting</string>
    <string name="enter_old_password">Enter Old Password</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="payment_pending">Payment Pending</string>
    <string name="select_airport_details">Select Airport Details</string>
    <string name="flight_details">Flight Details</string>
    <string name="flight_number">Flight Number</string>
    <string name="are_you_sure_you_want_to_clear_this_chat">Are you sure you want to clear\nthis chat</string>
    <string name="unarmed">Unarmed</string>
    <string name="armed">Armed</string>
    <string name="un_armed">UnArmed</string>
    <string name="please_enter_your_email">Please enter your email</string>
    <string name="please_enter_valid_email">Please enter valid email</string>
    <string name="please_enter_your_password">Please enter your password</string>
    <string name="accept_terms">Please accept the terms and conditions first.</string>
    <string name="error_select_profile_pic">Please select a profile picture.</string>
    <string name="error_enter_name">Please enter your  name.</string>
    <string name="error_enter_email">Please enter your email.</string>
    <string name="error_invalid_email">Please enter a valid email address.</string>
    <string name="error_enter_phone">Please enter your mobile number.</string>
    <string name="error_enter_message">Please write message.</string>
    <string name="error_invalid_phone">Please enter a valid mobile number.</string>
    <string name="error_select_dob">Please select your date of birth.</string>
    <string name="error_enter_password">Please enter your password.</string>
    <string name="error_password_length">Password must be at least 6 characters long.</string>
    <string name="error_confirm_password">Please confirm your password.</string>
    <string name="error_password_mismatch">Passwords do not match.</string>
    <string name="please_enter_confirm_password">Please enter confirm password</string>
    <string name="please_enter_old_password">Please enter old password</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="enter_description">Enter description</string>
    <string name="no_driver_found">No driver found</string>
    <string name="pick_up_location">Pick up location</string>
    <string name="drop_off_location">Drop off location</string>
    <string name="select_driver_type">Select Driver Type</string>
    <string name="dashes">----</string>
    <string name="dash">---</string>
    <string name="dollor_sign">$</string>
    <string name="estimated_price">Estimated Price</string>
    <string name="dd_mm_yyyy">dd-mm-yyyy</string>
    <string name="hh_mm">HH:mm</string>
    <string name="airport">Airport</string>
    <string name="other">Other</string>
    <string name="continue_">Continue</string>
    <string name="_20">$20</string>
    <string name="something_went_wrong_while_getting_directions">Something went wrong while getting directions</string>
    <string name="please_select_driver_type">Please select driver type</string>
    <string name="please_select_start_location">Please select start location</string>
    <string name="please_select_end_location">Please select end location</string>
    <string name="please_select_date">Please select date</string>
    <string name="please_select_time">Please select time</string>
    <string name="please_select_location_type">Please select location type</string>
    <string name="please_fill_in_flight_details">Please fill in flight details</string>
    <string name="no_data_found">No Data Found</string>
</resources>