<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/base_layout"
    android:layout_width="match_parent"

    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:gravity="center_horizontal">
<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    app:cardBackgroundColor="@color/white"
    android:layout_margin="35dp"
    app:cardCornerRadius="10dp"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_margin="@dimen/_10sdp"
            android:orientation="horizontal">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginRight="15dp"
                android:text="@string/oops"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="25dp" />

        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"

            android:gravity="center"
            android:text="@string/you_need_to_allow_access_to_nlocation_in_order_to_use_app_nplease_try_again_and_hit_below_button"
            android:textColor="@color/black"
            android:textSize="13dp" />

        <android.widget.Button
            android:id="@+id/btnTryAgain"
            android:layout_width="150dp"
            android:layout_height="30dp"
            android:background="@drawable/bg_btn_blackoutline"
            android:text="@string/try_again"
            android:textAllCaps="false"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            app:layout_constraintEnd_toEndOf="@+id/linearLayout1"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout1" />

    </LinearLayout>


</androidx.cardview.widget.CardView>

</RelativeLayout>