<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:id="@+id/swipeRefreshLayout"
    tools:context=".home.fragment.HistoryFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


    <TextView
        android:id="@+id/tvHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="@font/sans_semi_bold"
        android:gravity="center"
        android:paddingVertical="@dimen/_10sdp"
        android:text="@string/history"
        android:textColor="@color/white"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_5sdp"
        android:background="@drawable/top_rounded_bg"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHeader">

        <LinearLayout
            android:id="@+id/llHistoryButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_22sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvCurrent"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_bg"
                android:elevation="@dimen/_5sdp"
                android:fontFamily="@font/sans_semi_bold"
                android:gravity="center"
                android:paddingVertical="@dimen/_10sdp"
                android:text="@string/current"
                android:textColor="@color/white"
                android:textSize="@dimen/_13ssp" />

            <TextView
                android:id="@+id/tvPast"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:layout_weight="1"
                android:background="@drawable/black_stroke_button_bg"
                android:elevation="@dimen/_5sdp"
                android:fontFamily="@font/sans_semi_bold"
                android:gravity="center"
                android:text="@string/past"
                android:textColor="@color/black"
                android:textSize="@dimen/_13ssp" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvHistory"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/llHistoryButtons"
            android:layout_marginVertical="@dimen/_10sdp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_history" />
    </RelativeLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvNoDataFound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/gilroy_medium"
        android:text="@string/no_data_found"
        android:textColor="@color/black"
        android:textSize="@dimen/_12sdp"
        android:visibility="gone"
        app:fontFamily="@font/gilroy_medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>