<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_30sdp"
        app:cardCornerRadius="@dimen/_15sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/tvHeading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:fontFamily="@font/sans_semi_bold"
                android:gravity="center"
                android:textColor="@color/black"
                android:text="@string/log_out"
                android:textSize="@dimen/_16sdp"
                app:layout_constraintTop_toTopOf="parent" />
            <TextView
                android:id="@+id/tvDialogContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sans_medium"
                android:gravity="center"
                android:textColor="@color/black50"
                android:text="@string/are_you_sure_you_want_to_logout"
                android:textSize="@dimen/_12sdp"
                android:layout_marginVertical="@dimen/_5sdp"
                app:layout_constraintTop_toBottomOf="@+id/tvHeading" />
            <View
                android:id="@+id/view5"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@color/black50"
                app:layout_constraintTop_toBottomOf="@+id/tvDialogContent" />
            <View
                android:id="@+id/view6"
                android:layout_width="0.5dp"
                android:layout_height="0dp"
                android:background="@color/black50"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view5" />
            <TextView
                android:id="@+id/tvYesLogout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sans_medium"
                android:text="@string/yes"
                android:paddingVertical="@dimen/_5sdp"
                android:gravity="center"
                android:textColor="@color/button_color"
                android:textSize="@dimen/_15sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/view6"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/view6" />
            <TextView
                android:id="@+id/tvNoLogout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sans_medium"
                android:text="@string/no"
                android:paddingVertical="@dimen/_5sdp"
                android:gravity="center"
                android:textColor="@color/button_color"
                android:textSize="@dimen/_15sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/view6"
                app:layout_constraintTop_toTopOf="@+id/view6" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>